--- a/youtube.html
+++ b/youtube.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title> TANISHQ KOUL YOUtube CLONE </title>
+  <title> TANISHQ KOUL YOUTUBE CLONE </title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
